Fix an issue where the CCS index patterns could to be created in Kibana

--- a/src/test/resources/sg_roles.yml
+++ b/src/test/resources/sg_roles.yml
@@ -364,6 +364,9 @@ sg_twitter:
     'twitter':
       '*':
         - '*'
+    'analytics':
+      '*':
+        - '*'
         
 sg_aliasmngt:
   indices:
