Support environment variables in sg_*.yml files to make them passwordless ITT-1677 (#676)

--- a/src/test/resources/sg_internal_users.yml
+++ b/src/test/resources/sg_internal_users.yml
@@ -183,3 +183,8 @@ itt1635:
 kibanaserver:
   readonly: true
   hash: $2a$12$4AcgAt3xwOWadA5s5blL6ev39OXDNhmOesEoo33eZtrq2N0YrU3H.
+
+env.replace@example.comp.com:
+  hash: $2a$12$n5nubfWATfQjSYHiWtUyeOxMIxFInUHOAx8VMmGmxFNPGpaBmeB.m
+  #password is: nagilum
+  
