--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>7.x-HEAD-SNAPSHOT</version>
+  <version>7.0.0-35.0.0-beta1-SNAPSHOT</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -34,8 +34,8 @@
   </licenses>
 
   <properties>
-    <sgssl.version>7.x-HEAD-SNAPSHOT</sgssl.version>
-    <enterprise-modules.version>7.x-enterprise-HEAD-SNAPSHOT</enterprise-modules.version>
+    <sgssl.version>7.0.0-35.0.0-beta1-SNAPSHOT</sgssl.version>
+    <enterprise-modules.version>7.0.0-35.0.0-beta1-SNAPSHOT</enterprise-modules.version>
     <elasticsearch.version>7.0.0</elasticsearch.version>
     
     <!-- deps -->
