[AUTO][ci skip] Set enterprise modules version to 7.0.0-35.0.0-beta1

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <properties>
     <sgssl.version>7.0.0-35.0.0-beta1</sgssl.version>
-    <enterprise-modules.version>7.0.0-35.0.0-beta1-SNAPSHOT</enterprise-modules.version>
+    <enterprise-modules.version>7.0.0-35.0.0-beta1</enterprise-modules.version>
     <elasticsearch.version>7.0.0</elasticsearch.version>
     
     <!-- deps -->
