--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>search-guard-7</artifactId>
   <packaging>jar</packaging>
   <!-- 6.x.y-a.b-->
-  <version>7.0.0-35.0.0-beta1-SNAPSHOT</version>
+  <version>7.0.0-35.0.0-beta1</version>
   <name>Search Guard</name>
   <description>Provide access control related features for Elasticsearch 6</description>
   <url>https://github.com/floragunncom/search-guard</url>
@@ -59,7 +59,7 @@
     <url>https://github.com/floragunncom/search-guard</url>
     <connection>scm:git:git@github.com:floragunncom/search-guard.git</connection>
     <developerConnection>scm:git:git@github.com:floragunncom/search-guard.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v7.0.0-35.0.0-beta1</tag>
   </scm>
 
   <issueManagement>
