Added missing config option

--- a/sgconfig/sg_config.yml
+++ b/sgconfig/sg_config.yml
@@ -223,6 +223,7 @@ searchguard:
 #      ip_rate_limiting:
 #        type: ip
 #        allowed_tries: 10
+#        time_window_seconds: 3600
 #        block_expiry_seconds: 600
 #        max_blocked_clients: 100000
 #        max_tracked_clients: 100000
@@ -230,6 +231,7 @@ searchguard:
 #        type: username
 #        authentication_backend: intern        
 #        allowed_tries: 10
+#        time_window_seconds: 3600
 #        block_expiry_seconds: 600
 #        max_blocked_clients: 100000
 #        max_tracked_clients: 100000
