--- a/src/test/resources/log4j2-test.properties
+++ b/src/test/resources/log4j2-test.properties
@@ -18,7 +18,7 @@ rootLogger.appenderRef.console.ref = console
 rootLogger.appenderRef.file.ref = LOGFILE
 
 logger.sg.name = com.floragunn
-logger.sg.level = debug
+logger.sg.level = warn
 
 #logger.sgt.name = sg_action_trace
 #logger.sgt.level = trace
