--- a/sgconfig/sg_config.yml
+++ b/sgconfig/sg_config.yml
@@ -219,3 +219,20 @@ searchguard:
         authorization_backend:
           type: ldap # NOT FREE FOR COMMERCIAL USE
           #config goes here ...
+#    auth_failure_listeners:
+#      ip_rate_limiting:
+#        type: ip
+#        allowed_tries: 10
+#        time_window_seconds: 3600
+#        block_expiry_seconds: 600
+#        max_blocked_clients: 100000
+#        max_tracked_clients: 100000
+#      internal_authentication_backend_limiting:
+#        type: username
+#        authentication_backend: intern        
+#        allowed_tries: 10
+#        time_window_seconds: 3600
+#        block_expiry_seconds: 600
+#        max_blocked_clients: 100000
+#        max_tracked_clients: 100000
+        
