--- a/sgconfig/sg_action_groups.yml
+++ b/sgconfig/sg_action_groups.yml
@@ -1,136 +1,179 @@
-UNLIMITED:
-  readonly: true
-  permissions:
-    - "*"
-
-###### INDEX LEVEL ######
-
-INDICES_ALL:
-  readonly: true
-  permissions:
-    - "indices:*"
-
-# for backward compatibility
-ALL:
-  readonly: true
-  permissions:
-    - INDICES_ALL
-
-MANAGE:
-  readonly: true
-  permissions:
-    - "indices:monitor/*"
-    - "indices:admin/*"
-
-CREATE_INDEX:
-  readonly: true
-  permissions:
-    - "indices:admin/create"
-    - "indices:admin/mapping/put"
-
-MANAGE_ALIASES:
-  readonly: true
-  permissions:
-    - "indices:admin/aliases*"
-
-# for backward compatibility
-MONITOR:
-  readonly: true
-  permissions:
-    - INDICES_MONITOR
-
-INDICES_MONITOR:
-  readonly: true
-  permissions:
-    - "indices:monitor/*"
-
-DATA_ACCESS:
-  readonly: true
-  permissions:
-    - "indices:data/*"
-    - CRUD
-
-WRITE:
-  readonly: true
-  permissions:
-    - "indices:data/write*"
-    - "indices:admin/mapping/put"
-
-READ:
-  readonly: true
-  permissions:
-    - "indices:data/read*"
-    - "indices:admin/mappings/fields/get*"
-
-DELETE:
-  readonly: true
-  permissions:
-    - "indices:data/write/delete*"
-
-CRUD:
-  readonly: true
-  permissions:
-    - READ
-    - WRITE
-
-SEARCH:
-  readonly: true
-  permissions:
-    - "indices:data/read/search*"
-    - "indices:data/read/msearch*"
-    - SUGGEST
-
-SUGGEST:
-  readonly: true
-  permissions:
-    - "indices:data/read/suggest*"
-
-INDEX:
-  readonly: true
-  permissions:
-    - "indices:data/write/index*"
-    - "indices:data/write/update*"
-    - "indices:admin/mapping/put"
-    - "indices:data/write/bulk*"
-
-GET:
-  readonly: true
-  permissions:
-    - "indices:data/read/get*"
-    - "indices:data/read/mget*"
-
-###### CLUSTER LEVEL ######
-
+---
+_sg_meta:
+  type: "actiongroups"
+  config_version: 2
 CLUSTER_ALL:
-  readonly: true
+  reserved: true
+  hidden: false
   permissions:
-    - "cluster:*"
-
-CLUSTER_MONITOR:
-  readonly: true
+  - "cluster:*"
+  type: "cluster"
+  description: "Migrated from v6"
+ALL:
+  reserved: true
+  hidden: false
   permissions:
-    - "cluster:monitor/*"
-
-CLUSTER_COMPOSITE_OPS_RO:
-  readonly: true
+  - "INDICES_ALL"
+  type: "index"
+  description: "Migrated from v6"
+CRUD:
+  reserved: true
+  hidden: false
   permissions:
-    - "indices:data/read/mget"
-    - "indices:data/read/msearch"
-    - "indices:data/read/mtv"
-    - "indices:admin/aliases/exists*"
-    - "indices:admin/aliases/get*"
-    - "indices:data/read/scroll"
-
+  - "READ"
+  - "WRITE"
+  type: "index"
+  description: "Migrated from v6"
+SEARCH:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/read/search*"
+  - "indices:data/read/msearch*"
+  - "SUGGEST"
+  type: "index"
+  description: "Migrated from v6"
+MONITOR:
+  reserved: true
+  hidden: false
+  permissions:
+  - "INDICES_MONITOR"
+  type: "index"
+  description: "Migrated from v6"
+DATA_ACCESS:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/*"
+  - "CRUD"
+  type: "index"
+  description: "Migrated from v6"
+CREATE_INDEX:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:admin/create"
+  - "indices:admin/mapping/put"
+  type: "index"
+  description: "Migrated from v6"
+WRITE:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/write*"
+  - "indices:admin/mapping/put"
+  type: "index"
+  description: "Migrated from v6"
+MANAGE_ALIASES:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:admin/aliases*"
+  type: "index"
+  description: "Migrated from v6"
+READ:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/read*"
+  - "indices:admin/mappings/fields/get*"
+  type: "index"
+  description: "Migrated from v6"
+INDICES_ALL:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:*"
+  type: "index"
+  description: "Migrated from v6"
+DELETE:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/write/delete*"
+  type: "index"
+  description: "Migrated from v6"
 CLUSTER_COMPOSITE_OPS:
-  readonly: true
+  reserved: true
+  hidden: false
   permissions:
-    - "indices:data/write/bulk"
-    - "indices:admin/aliases*"
-    - "indices:data/write/reindex"
-    - CLUSTER_COMPOSITE_OPS_RO
-  
+  - "indices:data/write/bulk"
+  - "indices:admin/aliases*"
+  - "indices:data/write/reindex"
+  - "CLUSTER_COMPOSITE_OPS_RO"
+  type: "cluster"
+  description: "Migrated from v6"
+CLUSTER_COMPOSITE_OPS_RO:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/read/mget"
+  - "indices:data/read/msearch"
+  - "indices:data/read/mtv"
+  - "indices:admin/aliases/exists*"
+  - "indices:admin/aliases/get*"
+  - "indices:data/read/scroll"
+  type: "cluster"
+  description: "Migrated from v6"
+GET:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/read/get*"
+  - "indices:data/read/mget*"
+  type: "index"
+  description: "Migrated from v6"
+MANAGE:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:monitor/*"
+  - "indices:admin/*"
+  type: "index"
+  description: "Migrated from v6"
+CLUSTER_MONITOR:
+  reserved: true
+  hidden: false
+  permissions:
+  - "cluster:monitor/*"
+  type: "cluster"
+  description: "Migrated from v6"
 MANAGE_SNAPSHOTS:
-  readonly: true
+  reserved: true
+  hidden: false
   permissions:
-    - "cluster:admin/snapshot/*"
-    - "cluster:admin/repository/*"
+  - "cluster:admin/snapshot/*"
+  - "cluster:admin/repository/*"
+  type: "index"
+  description: "Migrated from v6"
+INDEX:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/write/index*"
+  - "indices:data/write/update*"
+  - "indices:admin/mapping/put"
+  - "indices:data/write/bulk*"
+  type: "index"
+  description: "Migrated from v6"
+UNLIMITED:
+  reserved: true
+  hidden: false
+  permissions:
+  - "*"
+  type: "index"
+  description: "Migrated from v6"
+INDICES_MONITOR:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:monitor/*"
+  type: "index"
+  description: "Migrated from v6"
+SUGGEST:
+  reserved: true
+  hidden: false
+  permissions:
+  - "indices:data/read/suggest*"
+  type: "index"
+  description: "Migrated from v6"
