--- a/sgconfig/sg_roles_mapping.yml
+++ b/sgconfig/sg_roles_mapping.yml
@@ -1,34 +1,67 @@
-# In this file users, backendroles and hosts can be mapped to Search Guard roles.
-# Permissions for Search Guard roles are configured in sg_roles.yml
-
+---
+_sg_meta:
+  type: "rolesmapping"
+  config_version: 2
 sg_all_access:
-  readonly: true
-  backendroles:
-    - admin
-
-sg_logstash:
-  backendroles:
-    - logstash
-    
-sg_kibana_server:
-  readonly: true
-  users:
-    - kibanaserver
-    
-sg_kibana_user:
-  backendroles:
-    - kibanauser
-
-sg_readall:
-  readonly: true
-  backendroles:
-    - readall
-
-sg_manage_snapshots:
-  readonly: true
-  backendroles:
-    - snapshotrestore
-
+  reserved: true
+  hidden: false
+  backend_roles:
+  - "admin"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
 sg_own_index:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - '*'
+  - "*"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_logstash:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "logstash"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_kibana_user:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "kibanauser"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_readall:
+  reserved: true
+  hidden: false
+  backend_roles:
+  - "readall"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_manage_snapshots:
+  reserved: true
+  hidden: false
+  backend_roles:
+  - "snapshotrestore"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_kibana_server:
+  reserved: true
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "kibanaserver"
+  and_backend_roles: []
+  description: "Migrated from v6"
