--- a/src/test/resources/sg_action_groups.yml
+++ b/src/test/resources/sg_action_groups.yml
@@ -1,65 +1,103 @@
+---
+_sg_meta:
+  type: "actiongroups"
+  config_version: 2
+CLUSTER_ALL:
+  reserved: false
+  hidden: false
+  permissions:
+  - "cluster:*"
+  type: "cluster"
+  description: "Migrated from v6"
 ALL:
+  reserved: false
+  hidden: false
   permissions:
   - "indices:*"
-MANAGE:
-  permissions:
-  - "indices:monitor/*"
-  - "indices:admin/*"
-CREATE_INDEX:
-  permissions:
-  - "indices:admin/create"
-  - "indices:admin/mapping/put"
-MANAGE_ALIASES:
-  permissions:
-  - "indices:admin/aliases*"
-MONITOR:
-  permissions:
-  - "indices:monitor/*"
-DATA_ACCESS:
-  permissions:
-  - "indices:data/*"
-  - "indices:admin/mapping/put"
-WRITE:
-  permissions:
-  - "indices:data/write*"
-  - "indices:admin/mapping/put"
-READ:
-  permissions:
-  - "indices:data/read*"
-DELETE:
-  permissions:
-  - "indices:data/write/delete*"
+  type: "index"
+  description: "Migrated from v6"
 CRUD:
+  reserved: false
+  hidden: false
   permissions:
-  - READ
-  - WRITE
+  - "READ"
+  - "WRITE"
+  type: "index"
+  description: "Migrated from v6"
 SEARCH:
+  reserved: false
+  hidden: false
   permissions:
   - "indices:data/read/search*"
   - "indices:data/read/msearch*"
-  - SUGGEST
-SUGGEST:
+  - "SUGGEST"
+  type: "index"
+  description: "Migrated from v6"
+MONITOR:
+  reserved: false
+  hidden: false
   permissions:
-  - "indices:data/read/suggest*"
-INDEX:
+  - "indices:monitor/*"
+  type: "index"
+  description: "Migrated from v6"
+DATA_ACCESS:
+  reserved: false
+  hidden: false
   permissions:
-  - "indices:data/write/index*"
-  - "indices:data/write/update*"
+  - "indices:data/*"
   - "indices:admin/mapping/put"
-GET:
+  type: "index"
+  description: "Migrated from v6"
+CREATE_INDEX:
+  reserved: false
+  hidden: false
   permissions:
-  - "indices:data/read/get*"
-  - "indices:data/read/mget*"
-
-# CLUSTER
-CLUSTER_ALL:
+  - "indices:admin/create"
+  - "indices:admin/mapping/put"
+  type: "index"
+  description: "Migrated from v6"
+WRITE:
+  reserved: false
+  hidden: false
   permissions:
-  - cluster:*
-CLUSTER_MONITOR:
+  - "indices:data/write*"
+  - "indices:admin/mapping/put"
+  type: "index"
+  description: "Migrated from v6"
+MANAGE_ALIASES:
+  reserved: false
+  hidden: false
   permissions:
-  - cluster:monitor/*
-  
+  - "indices:admin/aliases*"
+  type: "index"
+  description: "Migrated from v6"
+READ:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:data/read*"
+  type: "index"
+  description: "Migrated from v6"
+DELETE:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:data/write/delete*"
+  type: "index"
+  description: "Migrated from v6"
+CLUSTER_COMPOSITE_OPS:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:data/write/bulk"
+  - "indices:admin/aliases*"
+  - "indices:data/write/reindex"
+  - "CLUSTER_COMPOSITE_OPS_RO"
+  type: "cluster"
+  description: "Migrated from v6"
 CLUSTER_COMPOSITE_OPS_RO:
+  reserved: false
+  hidden: false
   permissions:
   - "indices:data/read/mget"
   - "indices:data/read/msearch"
@@ -67,12 +105,44 @@ CLUSTER_COMPOSITE_OPS_RO:
   - "indices:data/read/coordinate-msearch*"
   - "indices:admin/aliases/exists*"
   - "indices:admin/aliases/get*"
-CLUSTER_COMPOSITE_OPS:
+  type: "cluster"
+  description: "Migrated from v6"
+GET:
+  reserved: false
+  hidden: false
   permissions:
-  - "indices:data/write/bulk"
-  - "indices:admin/aliases*"
-  - "indices:data/write/reindex"
-  - CLUSTER_COMPOSITE_OPS_RO
-  
-# HEALTH_AND_STATS = n"cluster:monitor/health*", "cluster:monitor/stats*", "indices:monitor/stats*", "cluster:monitor/nodes/stats*"
-# ALL = cluster:*", "indices:admin/template/*
+  - "indices:data/read/get*"
+  - "indices:data/read/mget*"
+  type: "index"
+  description: "Migrated from v6"
+MANAGE:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:monitor/*"
+  - "indices:admin/*"
+  type: "index"
+  description: "Migrated from v6"
+CLUSTER_MONITOR:
+  reserved: false
+  hidden: false
+  permissions:
+  - "cluster:monitor/*"
+  type: "cluster"
+  description: "Migrated from v6"
+INDEX:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:data/write/index*"
+  - "indices:data/write/update*"
+  - "indices:admin/mapping/put"
+  type: "index"
+  description: "Migrated from v6"
+SUGGEST:
+  reserved: false
+  hidden: false
+  permissions:
+  - "indices:data/read/suggest*"
+  type: "index"
+  description: "Migrated from v6"
