--- a/src/test/resources/sg_roles_bs.yml
+++ b/src/test/resources/sg_roles_bs.yml
@@ -1,26 +1,57 @@
+---
+_sg_meta:
+  type: "roles"
+  config_version: 2
 sg_public:
-  cluster:
-    - CLUSTER_COMPOSITE_OPS
-  indices:
-    '*':
-      '*':
-        - indices:admin/create
-        - indices:admin/mapping/put
-        - indices:data/write/bulk[s]
-
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "CLUSTER_COMPOSITE_OPS"
+  index_permissions:
+  - index_patterns:
+    - "*"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "indices:admin/mapping/put"
+    - "indices:admin/create"
+    - "indices:data/write/bulk[s]"
+  tenant_permissions: []
 sg_all_access:
-  cluster:
-    - '*'
-  indices:
-    '*':
-      '*':  
-        - ALL
-
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "*"
+  index_permissions:
+  - index_patterns:
+    - "*"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "ALL"
+  tenant_permissions: []
 sg_role_klingons1:
-  indices:
-    test:
-      '*':  
-        - '*'
-    lorem:
-      '*':
-        - indices:data/write/index
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions: []
+  index_permissions:
+  - index_patterns:
+    - "test"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "*"
+  - index_patterns:
+    - "lorem"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "indices:data/write/index"
+  tenant_permissions: []
