--- a/src/test/resources/sg_roles_ccs.yml
+++ b/src/test/resources/sg_roles_ccs.yml
@@ -1,13 +1,28 @@
+---
+_sg_meta:
+  type: "roles"
+  config_version: 2
 sg_public:
-  cluster:
-    - 'cluster:monitor/main'
-    #- CLUSTER_COMPOSITE_OPS_RO
-
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "cluster:monitor/main"
+  index_permissions: []
+  tenant_permissions: []
 sg_all_access:
-  cluster:
-    - cluster:monitor/main
-  indices:
-    '*':
-      '*':  
-        - indices:data/read/search
-        - indices:admin/shards/search_shards
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "cluster:monitor/main"
+  index_permissions:
+  - index_patterns:
+    - "*"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "indices:data/read/search"
+    - "indices:admin/shards/search_shards"
+  tenant_permissions: []
