--- a/src/test/resources/sg_roles_composite.yml
+++ b/src/test/resources/sg_roles_composite.yml
@@ -1,41 +1,71 @@
-#sg_public, sg_role_host1, sg_role_klingons1, sg_role_klingons2, sg_role_starfleet, sg_role_starfleet_library, sg_user1
-
-sg_role_klingons1:
-  cluster:
-    - indices:data/read/msearch
-  indices:
-    klingonempire:
-      ships:  
-        - READ
-
-sg_role_klingons2:
-  indices:
-    klingonempire:
-      praxis:  
-        - READ
-
-sg_role_starfleet:
-  indices:
-    sf:
-       ships:  
-         - READ
-       public:  
-         - 'indices:*'
-       students:  
-         - READ
-       alumni:  
-         - READ
-       'admin*':  
-         - READ
-    'pub*':
-       '*':  
-         - READ  
-  cluster:
-    - 'cluster:monitor*'
-    - indices:data/read/scroll
-
+---
+_sg_meta:
+  type: "roles"
+  config_version: 2
 sg_user1:
-  indices:
-    'alias1':
-      '*':
-        - READ
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions: []
+  index_permissions:
+  - index_patterns:
+    - "alias1"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "READ"
+  tenant_permissions: []
+sg_role_klingons1:
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "indices:data/read/msearch"
+  index_permissions:
+  - index_patterns:
+    - "klingonempire"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "READ"
+  tenant_permissions: []
+sg_role_klingons2:
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions: []
+  index_permissions:
+  - index_patterns:
+    - "klingonempire"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "READ"
+  tenant_permissions: []
+sg_role_starfleet:
+  reserved: false
+  hidden: false
+  description: "Migrated from v6 (all types mapped)"
+  cluster_permissions:
+  - "cluster:monitor*"
+  - "indices:data/read/scroll"
+  index_permissions:
+  - index_patterns:
+    - "sf"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "READ"
+    - "indices:*"
+  - index_patterns:
+    - "pub*"
+    dls: null
+    fls: null
+    masked_fields: null
+    allowed_actions:
+    - "READ"
+  tenant_permissions: []
