--- a/src/test/resources/sg_roles_mapping.yml
+++ b/src/test/resources/sg_roles_mapping.yml
@@ -1,170 +1,366 @@
-sg_role_starfleet:
-  backendroles:
-    - starfleet
-    - captains
-    - defectors
-  hosts:
-    - "*.starfleetintranet.com"
-  users:
-    - nagilum
-
-sg_role_starfleet_captains:
-  backendroles:
-    - captains
-
-sg_role_starfleet_library:
-  backendroles:
-    - 'starfleet*'
-    - ambassador
-
-sg_role_vulcans:
-  backendroles:
-    - vulcangov
-  users:
-    - kirk
-
-sg_role_vulcans_admin:
-  backendroles:
-    - vulcanadmin
-    
-sg_role_klingons1:
-  backendroles:
-    - klingon
-
-sg_role_klingons2:
-  backendroles:
-    - klingon
-
-
-sg_all_access:
-  users:
-    - nagilum
-    
-sg_public:
-  users:
-    - '*'
-sg_flsdls:
-  users:
-    - sarek
-
-sg_kibana4:
-  users:
-    - bug108
-    
-sg_zdummy_all:
-  users:
-    - bug108
-
-sg_unittest_1:
-  users:
-    - 'CN=spock,OU=client,O=client,L=Test,C=DE'
-    
-sg_role_host1:
-  hosts:
-    - 127.0.0.1
-    - localhost
-    
-sg_role_host2:
-  users:
-    - sg_host_127.0.0.1
-    - sg_host_localhost
-
-sg_theindex_admin:
-  users:
-    - theindexadmin
-    
-sg_user1:
-  users:
-    - worf
-     
-sg_user2:
-  users:
-    - picard
-    
-sg_multiget:
-  users:
-    - picard
-    
-sg_shakespeare:
-  users:
-    - picard
-
+---
+_sg_meta:
+  type: "rolesmapping"
+  config_version: 2
 sg_own_index:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - spock
-    - kirk
-
-sg_writer:
+  - "spock"
+  - "kirk"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_unittest_1:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - writer
-
-sg_dlsnoinvest:
-  users:
-    - dlsnoinvest
-
-sg_baz:
-  users:
-    - baz
-
-sg_role01_role02:
-  and_backendroles:
-    - role01
-    - role02
-
-sg_restore:
-  users:
-    - restoreuser
-    
-sg_snapres:
-  users:
-    - snapresuser
-    
-sg_logstash:
-  users:
-    - logstash
-
-sg_twitter:
-  users:
-    - twitter
-    
-sg_attr:
-  users:
-    - custattr
-    
+  - "CN=spock,OU=client,O=client,L=Test,C=DE"
+  and_backend_roles: []
+  description: "Migrated from v6"
 sg_rexclude:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - rexclude
-    
-sg_aliastest:
-  users:
-    - aliastest
-    - dummy
-    
-sg_mindex1:
-  users:
-    - mindex12
-
-sg_mindex2:
-  users:
-    - mindex12
-    
-sg_mindex3:
-  users:
-    - mindex12
-    
-sg_ccsresolv:
-  users:
-    - ccsresolv
-
+  - "rexclude"
+  and_backend_roles: []
+  description: "Migrated from v6"
 sg_underscore:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - underscore
-    
-sg_kibana_server:
-  readonly: true
+  - "underscore"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_vulcans_admin:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "vulcanadmin"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_shakespeare:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - kibanaserver
-    
+  - "picard"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_aliastest:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "aliastest"
+  - "dummy"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_user1:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "worf"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_vulcans:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "vulcangov"
+  hosts: []
+  users:
+  - "kirk"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_flsdls:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "sarek"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_ccsresolv:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "ccsresolv"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_user2:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "picard"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_starfleet_captains:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "captains"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_restore:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "restoreuser"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_attr:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "custattr"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_mindex3:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "mindex12"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_starfleet_library:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "starfleet*"
+  - "ambassador"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_baz:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "baz"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_mindex2:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "mindex12"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_mindex1:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "mindex12"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_klingons1:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "klingon"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_snapres:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "snapresuser"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_klingons2:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "klingon"
+  hosts: []
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_kibana4:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "bug108"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_dlsnoinvest:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "dlsnoinvest"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_theindex_admin:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "theindexadmin"
+  and_backend_roles: []
+  description: "Migrated from v6"
 sg_remote_ccs:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
   users:
-    - crusherw
+  - "crusherw"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_zdummy_all:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "bug108"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_multiget:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "picard"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_kibana_server:
+  reserved: true
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "kibanaserver"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_all_access:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "nagilum"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_public:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "*"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_writer:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "writer"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_logstash:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "logstash"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role01_role02:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users: []
+  and_backend_roles:
+  - "role01"
+  - "role02"
+  description: "Migrated from v6"
+sg_role_starfleet:
+  reserved: false
+  hidden: false
+  backend_roles:
+  - "starfleet"
+  - "captains"
+  - "defectors"
+  hosts:
+  - "*.starfleetintranet.com"
+  users:
+  - "nagilum"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_host1:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts:
+  - "127.0.0.1"
+  - "localhost"
+  users: []
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_role_host2:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "sg_host_127.0.0.1"
+  - "sg_host_localhost"
+  and_backend_roles: []
+  description: "Migrated from v6"
+sg_twitter:
+  reserved: false
+  hidden: false
+  backend_roles: []
+  hosts: []
+  users:
+  - "twitter"
+  and_backend_roles: []
+  description: "Migrated from v6"
