[CI] add sonatype snapshot repo to settings.yml so that we can resolve parent pom snapshot versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
             cd ~/circleci-sg
 
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              mvn -U -Pcoverage verify -Dtest="$TESTFILES"
+              mvn -U -Pcoverage verify -Dtest="$TESTFILES -s settings.xml"
             else
               #no coverage for non-master branches
-              mvn -U verify -Dtest="$TESTFILES"
+              mvn -U verify -Dtest="$TESTFILES -s settings.xml"
             fi
       - store_test_results:
           path: target/surefire-reports
