rename "permissions" in acgtions groups to "allowed_actions"

--- a/src/main/resources/static_config/static_roles.yml
+++ b/src/main/resources/static_config/static_roles.yml
@@ -37,3 +37,9 @@ sg_kibana_user:
         - ".management-beats"
       allowed_actions:
         - "INDICES_ALL"
+  #tenant_permissions:
+  #  - tenant_patterns:
+  #      - "SG_GLOBAL"
+  #      - "SG_PRIVATE"
+  #    allowed_actions:
+  #      - "kibana:saved_objects/*"
