--- a/src/main/resources/static_config/static_action_goups.yml
+++ b/src/main/resources/static_config/static_action_goups.yml
@@ -5,28 +5,28 @@ _sg_meta:
 KIBANA_ALL:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "kibana:saved_objects/*"
   type: "kibana"
   description: "Statically defined"
 KIBANA_READ:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "kibana:saved_objects/*/read"
   type: "kibana"
   description: "Statically defined"
 CLUSTER_ALL:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "cluster:*"
   type: "cluster"
   description: "Statically defined"
 CRUD:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "READ"
   - "WRITE"
   type: "index"
@@ -34,7 +34,7 @@ CRUD:
 SEARCH:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/read/search*"
   - "indices:data/read/msearch*"
   - "SUGGEST"
@@ -43,7 +43,7 @@ SEARCH:
 DATA_ACCESS:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/*"
   - "CRUD"
   type: "index"
@@ -51,7 +51,7 @@ DATA_ACCESS:
 CREATE_INDEX:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:admin/create"
   - "indices:admin/mapping/put"
   type: "index"
@@ -59,7 +59,7 @@ CREATE_INDEX:
 WRITE:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/write*"
   - "indices:admin/mapping/put"
   type: "index"
@@ -67,14 +67,14 @@ WRITE:
 MANAGE_ALIASES:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:admin/aliases*"
   type: "index"
   description: "Statically defined"
 READ:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/read*"
   - "indices:admin/mappings/fields/get*"
   type: "index"
@@ -82,21 +82,21 @@ READ:
 INDICES_ALL:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:*"
   type: "index"
   description: "Statically defined"
 DELETE:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/write/delete*"
   type: "index"
   description: "Statically defined"
 CLUSTER_COMPOSITE_OPS:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/write/bulk"
   - "indices:admin/aliases*"
   - "indices:data/write/reindex"
@@ -106,7 +106,7 @@ CLUSTER_COMPOSITE_OPS:
 CLUSTER_COMPOSITE_OPS_RO:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/read/mget"
   - "indices:data/read/msearch"
   - "indices:data/read/mtv"
@@ -118,7 +118,7 @@ CLUSTER_COMPOSITE_OPS_RO:
 GET:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/read/get*"
   - "indices:data/read/mget*"
   type: "index"
@@ -126,7 +126,7 @@ GET:
 MANAGE:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:monitor/*"
   - "indices:admin/*"
   type: "index"
@@ -134,14 +134,14 @@ MANAGE:
 CLUSTER_MONITOR:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "cluster:monitor/*"
   type: "cluster"
   description: "Statically defined"
 MANAGE_SNAPSHOTS:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "cluster:admin/snapshot/*"
   - "cluster:admin/repository/*"
   type: "index"
@@ -149,7 +149,7 @@ MANAGE_SNAPSHOTS:
 INDEX:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/write/index*"
   - "indices:data/write/update*"
   - "indices:admin/mapping/put"
@@ -159,21 +159,21 @@ INDEX:
 UNLIMITED:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "*"
   type: "index"
   description: "Statically defined"
 INDICES_MONITOR:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:monitor/*"
   type: "index"
   description: "Statically defined"
 SUGGEST:
   reserved: true
   hidden: true
-  permissions:
+  allowed_actions:
   - "indices:data/read/suggest*"
   type: "index"
   description: "Statically defined"
