--- a/src/test/resources/sg_action_groups.yml
+++ b/src/test/resources/sg_action_groups.yml
@@ -5,21 +5,21 @@ _sg_meta:
 CLUSTER_ALL:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "cluster:*"
   type: "cluster"
   description: "Migrated from v6"
 ALL:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:*"
   type: "index"
   description: "Migrated from v6"
 CRUD:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "READ"
   - "WRITE"
   type: "index"
@@ -27,7 +27,7 @@ CRUD:
 SEARCH:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/read/search*"
   - "indices:data/read/msearch*"
   - "SUGGEST"
@@ -36,14 +36,14 @@ SEARCH:
 MONITOR:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:monitor/*"
   type: "index"
   description: "Migrated from v6"
 DATA_ACCESS:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/*"
   - "indices:admin/mapping/put"
   type: "index"
@@ -51,7 +51,7 @@ DATA_ACCESS:
 CREATE_INDEX:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:admin/create"
   - "indices:admin/mapping/put"
   type: "index"
@@ -59,7 +59,7 @@ CREATE_INDEX:
 WRITE:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/write*"
   - "indices:admin/mapping/put"
   type: "index"
@@ -67,28 +67,28 @@ WRITE:
 MANAGE_ALIASES:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:admin/aliases*"
   type: "index"
   description: "Migrated from v6"
 READ:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/read*"
   type: "index"
   description: "Migrated from v6"
 DELETE:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/write/delete*"
   type: "index"
   description: "Migrated from v6"
 CLUSTER_COMPOSITE_OPS:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/write/bulk"
   - "indices:admin/aliases*"
   - "indices:data/write/reindex"
@@ -98,7 +98,7 @@ CLUSTER_COMPOSITE_OPS:
 CLUSTER_COMPOSITE_OPS_RO:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/read/mget"
   - "indices:data/read/msearch"
   - "indices:data/read/mtv"
@@ -110,7 +110,7 @@ CLUSTER_COMPOSITE_OPS_RO:
 GET:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/read/get*"
   - "indices:data/read/mget*"
   type: "index"
@@ -118,7 +118,7 @@ GET:
 MANAGE:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:monitor/*"
   - "indices:admin/*"
   type: "index"
@@ -126,14 +126,14 @@ MANAGE:
 CLUSTER_MONITOR:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "cluster:monitor/*"
   type: "cluster"
   description: "Migrated from v6"
 INDEX:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/write/index*"
   - "indices:data/write/update*"
   - "indices:admin/mapping/put"
@@ -142,7 +142,7 @@ INDEX:
 SUGGEST:
   reserved: false
   hidden: false
-  permissions:
+  allowed_actions:
   - "indices:data/read/suggest*"
   type: "index"
   description: "Migrated from v6"
