Fix SSL unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -162,14 +162,6 @@
     </dependency>
 
     <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative</artifactId>
-      <version>${netty-native.version}</version>
-      <classifier>${os.detected.classifier}</classifier>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>org.elasticsearch.plugin</groupId>
       <artifactId>reindex-client</artifactId>
       <version>${elasticsearch.version}</version>
@@ -440,6 +432,43 @@
           <groupId>org.conscrypt</groupId>
           <artifactId>conscrypt-openjdk-uber</artifactId>
           <version>1.0.0.RC9</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>with-static-openssl-linux-non-fedora</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.floragunn</groupId>
+          <artifactId>search-guard-static-tcnative-beta</artifactId>
+          <version>1.1.1a-${netty-native.version}-non-fedora-linux-x86_64</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>with-static-openssl-linux-fedora</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.floragunn</groupId>
+          <artifactId>search-guard-static-tcnative-beta</artifactId>
+          <version>1.1.1a-${netty-native.version}-fedora-linux-x86_64</version>
+          <scope>provided</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>with-dynamic-openssl</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-tcnative</artifactId>
+          <version>${netty-native.version}</version>
+          <classifier>${os.detected.classifier}</classifier>
+          <scope>provided</scope>
         </dependency>
       </dependencies>
     </profile>
