--- a/src/main/resources/static_config/static_tenants.yml
+++ b/src/main/resources/static_config/static_tenants.yml
@@ -3,12 +3,13 @@ _sg_meta:
   type: "tenants"
   config_version: 2
 
-GLOBAL_TENANT:
+SGS_GLOBAL_TENANT:
   reserved: true
-  hidden: true
+  hidden: false
+  static: true
   description: "Global tenant"
 
-#SG_PRIVATE:
+#SGS_PRIVATE_TENANT:
 #  reserved: true
-#  hidden: true
+#  hidden: false
 #  description: "Private tenant"
