--- a/src/test/resources/sg_roles.yml
+++ b/src/test/resources/sg_roles.yml
@@ -338,11 +338,11 @@ sg_zdummy_all:
   - tenant_patterns:
     - "admin_1"
     allowed_actions:
-    - "kibana:saved_objects/*"
+    - "SGS_KIBANA_ALL_WRITE"
   - tenant_patterns:
     - "abcdef_2_2"
     allowed_actions:
-    - "kibana:saved_objects/*/read"
+    - "SGS_KIBANA_ALL_READ"
 sg_multiget:
   reserved: false
   hidden: false
@@ -729,11 +729,11 @@ sg_role_klingons1:
   - tenant_patterns:
     - "kltentrw"
     allowed_actions:
-    - "kibana:saved_objects/*"
+    - "SGS_KIBANA_ALL_WRITE"
   - tenant_patterns:
     - "kltentro"
     allowed_actions:
-    - "kibana:saved_objects/*/read"
+    - "SGS_KIBANA_ALL_READ"
 sg_snapres:
   reserved: false
   hidden: false
@@ -767,11 +767,11 @@ sg_role_klingons2:
   - tenant_patterns:
     - "praxisrw"
     allowed_actions:
-    - "kibana:saved_objects/*"
+    - "SGS_KIBANA_ALL_WRITE"
   - tenant_patterns:
     - "praxisro"
     allowed_actions:
-    - "kibana:saved_objects/*/read"
+    - "SGS_KIBANA_ALL_READ"
 sg_theindex_admin:
   reserved: false
   hidden: false
